css file for the index webpage

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Lasagna</h1>
-    <img src="Lasagna.jpeg">
+    <img src="Lasagna.jpeg" class="image">
     <h3>Description</h3>
     <p>This is a lasagna. I got the image from Google Images. It looks like it's tasty. Fin</p>
     <h3>Ingredients</h3>
@@ -26,7 +27,7 @@
         <li>Put it in the microwave</li>
         <li>Eat your lasagna</li>
         <li>Realise that it's terrible</li>
-        <li>Go on a proper site on Google to find how to actually make lasagna, rather than using some sketchy website</li>
+        <li>Go on a proper site on Google to find how to actually make lasagna</li>
         <li>Profit</li>
     </ol>
     
