modified the CSS and html folders to look more modern

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -10,14 +10,16 @@
 <body>
     <h1>Lasagna</h1>
 
-    <div class="image">
+<div class="image_complete">
         <img src="Lasagna.jpeg" class="image">
-    </div>
     
-    <div class="header_body">
-        <h3>Description</h3>
-        <p>This is a lasagna. I got the image from Google Images. It looks like it's tasty. Fin</p>
-    </div>
+        <div class="description">
+            <h3 >Description</h3>
+            <p>This is a lasagna. I got the image from Google Images. It looks like it's tasty. Fin</p>
+        </div>
+</div>
+
+<div class="real_body">
     <div class="header_body">
         <h3>Ingredients</h3>
         <ul>
@@ -41,6 +43,7 @@
             <li>Profit</li>
         </ol>
     </div>
+</div>
     
 </body>
 </html>
